fix buges with admin panel

--- a/admin/templates/index.html
+++ b/admin/templates/index.html
@@ -556,7 +556,7 @@ tbody tr:hover td { background: rgba(255,255,255,.017); }
       </div>
       <div class="nav-sec">Инструменты</div>
       <div class="ni" data-p="broadcast" onclick="go('broadcast')">
-        <span class="ic"><svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 8.5c0 4.4-3.6 8-8 8-1.5 0-2.8-.4-4-1.1L3 18l2.5-7C4.4 9.8 4 8.5 4 7c0-4.4 3.6-8 8-8 4.4 0 8 3.6 8 8z"/></svg></span>
+        <span class="ic"><svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 11l19-9-9 19-2-8-8-2z"/></svg></span>
         Рассылка
       </div>
     </nav>
